FULL working with job api
