# szamlazzponthu-test-ui-app/src/app/core/services/api/apis/JobTypesApi.ts
@@ -1,0 +1,61 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Usr API
+ * CRUD műveletek a Usr erőforráson.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  JobType,
+} from '../models/index';
+import {
+    JobTypeFromJSON,
+    JobTypeToJSON,
+} from '../models/index';
+
+/**
+ * 
+ */
+export class JobTypesApi extends runtime.BaseAPI {
+
+    /**
+     * Visszaadja a rendszerben engedélyezett munkakör enumokat.
+     * Elérhető JobType értékek listázása
+     */
+    async jobTypesGetRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<JobType>>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+
+        let urlPath = `/job-types`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(JobTypeFromJSON));
+    }
+
+    /**
+     * Visszaadja a rendszerben engedélyezett munkakör enumokat.
+     * Elérhető JobType értékek listázása
+     */
+    async jobTypesGet(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<JobType>> {
+        const response = await this.jobTypesGetRaw(initOverrides);
+        return await response.value();
+    }
+
+}
